@@ -1,6 +1,10 @@
 3.1.9
 	Fix again an accept-all-bug when built with SPF (AIDA Shinra)
 	Fix macro handling in ACL (AIDA Shinra)
+	%% syntax in format strings (AIDA Shinra)
+	Clarified "%Xm" and "%Xh" semantics (AIDA Shinra)
+	Fixed a memory leak at mlfi_eom (AIDA Shinra)
+	Fix a bug where doing RCPT twice when blacklised succeed (AIDA Shinra)
 3.1.8
 	Allow filtering on the HELO string
 	Back out previous SPF fix, it caused accept-all with SPF-less builds
